small changes to class names

--- a/index.html
+++ b/index.html
@@ -14,48 +14,48 @@
 </head>
 
 <body>
-    <div id="box">
+    <div class="box">
         <input placeholder="O que tenho que fazer..." />
 
-        <button id="botão-adicionar">Adicionar</button>
+        <button class="additional-button">Adicionar</button>
 
-        <ul id="tarefas">
-            <li class="intens-de-tarefas">
-                <button class="botão-do-foguete">
+        <ul class="tasks">
+            <li class="to-do-items">
+                <button class="rocket-button">
                     <i class="fa-solid fa-rocket"></i>
                 </button>
-                <p class="nome-da-tarefa">Tarefa 1</p>
-                <button class="botão-da-lixeira">
+                <p class="task-name">Tarefa 1</p>
+                <button class="trash-can-button">
                     <i class="fa-solid fa-trash"></i>
                 </button>
             </li>
 
-            <li class="intens-de-tarefas">
-                <button class="botão-do-foguete">
+            <li class="to-do-items">
+                <button class="rocket-button">
                     <i class="fa-solid fa-rocket"></i>
                 </button>
-                <p class="nome-da-tarefa">Tarefa 2</p>
-                <button class="botão-da-lixeira">
+                <p class="task-name">Tarefa 2</p>
+                <button class="trash-can-button">
                     <i class="fa-solid fa-trash"></i>
                 </button>
             </li>
 
-            <li class="intens-de-tarefas">
-                <button class="botão-do-foguete">
+            <li class="to-do-items">
+                <button class="rocket-button">
                     <i class="fa-solid fa-rocket"></i>
                 </button>
-                <p class="nome-da-tarefa">Tarefa 3</p>
-                <button class="botão-da-lixeira">
+                <p class="task-name">Tarefa 3</p>
+                <button class="trash-can-button">
                     <i class="fa-solid fa-trash"></i>
                 </button>
             </li>
 
-            <li class="intens-de-tarefas">
-                <button class="botão-do-foguete">
+            <li class="to-do-items">
+                <button class="rocket-button">
                     <i class="fa-solid fa-rocket"></i>
                 </button>
-                <p class="nome-da-tarefa">Tarefa 4</p>
-                <button class="botão-da-lixeira">
+                <p class="task-name">Tarefa 4</p>
+                <button class="trash-can-button">
                     <i class="fa-solid fa-trash"></i>
                 </button>
             </li>
