updating the application

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="./styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/21ae5469b1.js" crossorigin="anonymous"></script>
-    <title>Lista de Tarefas</title>
+    <script src="script.js" defer></script>
+    <title>to-do list</title>
 </head>
 
 <body>
     <div class="box">
-        <input placeholder="O que tenho que fazer..." />
+        <input class="task-input" placeholder="O que tenho que fazer..." />
 
-        <button class="additional-button">Adicionar</button>
+        <button class="add-task-button">Adicionar</button>
 
         <ul class="tasks">
             <li class="to-do-items">
